--- a/client/package.json
+++ b/client/package.json
@@ -4,20 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "devc": "rimraf .next/cache && npm run dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "13.4.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "sweetalert2": "^11.9.0",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "eslint-config-next": "14.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
